@@ -1,3 +1,8 @@
+Sat Jul  9 09:25:06 2011  Eric Hodel  <drbrain@segment7.net>
+
+	* enumerator.c:  Remove "enumeration sequenced by".
+	  [Ruby 1.9 - Bug #4757]
+
 Sat Jul  9 09:14:56 2011  Eric Hodel  <drbrain@segment7.net>
 
 	* io.c:  Note that methods other than IO#gets may increase IO#lineno.
